--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,11 +25,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script
+      src="https://apis.google.com/js/api.js"
+      type="text/javascript"
+    ></script>
+    <title>Calendar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="margin: 0; height: 100vh;"></div>
+    <div id="root" style="margin: 0; height: 200vh;"></div>
 
     <!--
       This HTML file is a template.
