--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -29,14 +29,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <script
       src="https://apis.google.com/js/api.js"
       type="text/javascript"
+      async
+      defer
     ></script>
     <title>Calendar</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="margin: 0;"></div>
 
     <!--
